--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header style="background-color: #FAE094;">
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <nav class="navbar navbar-expand-md navbar-light ">
     <div class="container-fluid">
         <nav class="navbar">
           <a class="navbar-brand" href="<%= root_path %>">
