--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -39,7 +39,7 @@
     </div>
     <div class="col-8">
       <div class="row">
-        <h2 class="my-5"><span>お気に入り登録をしている絵本</span></h2>
+        <h2 class="my-5 ml-3"><span>お気に入り登録をしている絵本</span></h2>
       </div>
       <div class="d-flex flex-wrap">
           <% if @favorite_books.present? %>
