[Update] コードの見直し

--- a/app/views/admin/books/new.html.erb
+++ b/app/views/admin/books/new.html.erb
@@ -1,3 +1,4 @@
+<!--下記使用なし-->
 <div class="container py-5">
   <div class="row mt-3 mb-3 offset-1 text-center">
     <h3 class="px-4 title-background">絵本新規登録</h3>
