--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class='col-md-11'>
-  		<h2 class="row mt-5 mb-5"><span>絵本の詳細</span></h2>
+  		<h2 class="row mt-5 mb-5 ml-2"><span>絵本の詳細</span></h2>
     		<table class='table'>
     		  <%= image_tag @book.image_url, style: "object-fit: fill; width: 180px; height: 120px;" %>
           <tr>
