--- a/app/views/public/members/confirm.html.erb
+++ b/app/views/public/members/confirm.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-12 text-center mt-5">
       <h4 class="mb-3">本当に退会しますか？</h4>
         <p class="mb-3">
-          退会すると、会員登録情報や<br>
+          退会すると、会員登録情報の確認や<br>
           お気に入り登録やコメントの投稿ができなくなります。<br>
           退会する場合は、「退会する」をクリックしてください。
         </p>
