--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,4 +1,4 @@
-<div class="container pt-5 pb-5">
+<div class="container pb-5">
   <div class="row">
     <div class="col-md-9">
       <%= render "public/searches/search" , books: @books %>
