--- a/app/views/public/post_comments/destroy.js.erb
+++ b/app/views/public/post_comments/destroy.js.erb
@@ -1,2 +1,3 @@
+console.log("hoge")
 $('#comment_index').html("<%= j(render 'public/post_comments/index', book: @book) %>");
 $('#comment_count').html("<%= @book.post_comments.count %>")
