いいね機能の非同期化

--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -25,7 +25,9 @@
             </td>
           </tr>
           <tr>
-            <td><%= render'public/favorites/favorite', book: @book %></td>
+            <td id="favorite_buttons_<%= @book.id %>">
+              <%= render'public/favorites/favorite', book: @book %>
+            </td>
             <td></td>
           </tr>
         </table>
