--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -95,12 +95,13 @@ h2 span {
 .pagination>li>a {
   border: none;     /*枠線をなくす*/
   color: #696969;   /*文字の色を変える*/
+  margin: 0 10px;
 }
 
 /* 表示しているページ番号のデザイン */
-.pagination>.active>a {
+ul.pagination>li.active>a {
   background: #A0DAEA;     /*背景の色を変える*/
-  border-radius: 15px;     /*角を丸くする*/
+  border-radius: 50% !important;   /*角を丸くする*/
 }
 
 /*ホバー時のデザイン*/
